# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-vcs/ChangeLog,v 1.105 2012/07/14 14:36:09 ulm Exp $

  14 Jul 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.1.9999-r1.ebuild:
  Reflect upstream renaming of configure.in to configure.ac.

  29 Jun 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.1.9999-r1.ebuild,
  metadata.xml:
  Add built with use dependency for emacs-common-gentoo[games?], bug 368647.

  24 Jun 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.1.9999-r1.ebuild:
  Store version information in system-configuration-options variable.

  10 Jun 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.1.9999-r1.ebuild:
  Game score files moved to app-emacs/emacs-common-gentoo. Configure doesn't
  support the --disable-maintainer-mode option any more, so remove it.
  USE=wide-int is independent of X, move option to correct place.

  07 Jun 2012; Ulrich Müller <ulm@gentoo.org> -emacs-vcs-24.0.96.ebuild,
  -emacs-vcs-24.0.97.ebuild, -emacs-vcs-24.0.9999-r4.ebuild:
  Remove old.

  04 Jun 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.1.9999-r1.ebuild,
  metadata.xml:
  Add pax_kernel USE flag to trunk version, bug 411439.

*emacs-vcs-24.1.9999-r1 (01 Jun 2012)

  01 Jun 2012; Ulrich Müller <ulm@gentoo.org> -emacs-vcs-24.1.9999.ebuild,
  +emacs-vcs-24.1.9999-r1.ebuild:
  Install live version as emacs-24-vcs, in order to avoid collisions with the
  upcoming 24.1 release.

  24 May 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.0.97.ebuild,
  emacs-vcs-24.0.9999-r4.ebuild, emacs-vcs-24.1.9999.ebuild:
  Delete unused local variable.

  22 May 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.1.9999.ebuild:
  Directory src/m is gone.

  22 May 2012; Ulrich Müller <ulm@gentoo.org> -emacs-vcs-24.0.94.ebuild,
  -emacs-vcs-24.0.95.ebuild, emacs-vcs-24.0.97.ebuild,
  emacs-vcs-24.0.9999-r4.ebuild, emacs-vcs-24.1.9999.ebuild: