@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-vcs/Attic/emacs-vcs-24.1.9999-r1.ebuild,v 1.8 2012/07/14 14:36:09 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-vcs/Attic/emacs-vcs-24.1.9999-r1.ebuild,v 1.9 2012/07/27 20:06:22 ulm Exp $
 
 EAPI=4
 
@@ -104,6 +104,10 @@ src_prepare() {
 	fi
 
 	epatch_user
+
+	# http://debbugs.gnu.org/12047#8
+	sed -i -e '/freebsd.*)/,+2s:[^ ]*crt\(begin\|\end\)\.o::' configure.ac \
+		|| die "unable to sed configure.ac"
 
 	if ! use alsa; then
 		# ALSA is detected even if not requested by its USE flag.
