@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/emacs-vcs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-vcs/ChangeLog,v 1.105 2012/07/14 14:36:09 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-vcs/ChangeLog,v 1.106 2012/07/27 20:06:22 ulm Exp $
+
+  27 Jul 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.1.9999-r1.ebuild:
+  Fix building on FreeBSD.
 
   14 Jul 2012; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.1.9999-r1.ebuild:
   Reflect upstream renaming of configure.in to configure.ac.
